@@ -510,6 +510,16 @@ domainname (ie 'hostname', not 'hostname.example.com').
 .RE
 .RE
 
+.RS 3
+.nf
+.B exists \fIPATH\fR
+.fi
+
+.RS 3
+Evaluates to \fBtrue\fR if \fIPATH\fR exists.
+.RE
+.RE
+
 .RE
 
 .IP "@@ifdef \fBVARIABLE\fR (DEPRECATED, will be removed in a future release)"
