@@ -283,6 +283,15 @@ static bool eval_bool_expression(struct bool_expression* expression, int linenum
     char * str;
 
     switch (expression->op) {
+        case BOOL_OP_EXISTS:
+            str = eval_string_expression(expression->expr, linenumber, filename, linebuf);
+
+            int retval = access(str, F_OK);
+            result = retval == 0;
+            log_msg(LOG_LEVEL_DEBUG, "access('%s', F_OK) returns %d: (%s)", str, retval, strerror(errno));
+            log_msg(eval_log_level, "eval(%p): bool exists '%s': %s", expression, str, btoa(result));
+            free(str);
+            break;
         case BOOL_OP_DEFINED:
             str = eval_string_expression(expression->expr, linenumber, filename, linebuf);
             result = list_find(str, conf->defsyms) != NULL;
